Closed Bug 73383 Opened 24 years ago Closed 24 years ago

Fix getting the root widget in nsViewManager::AddCoveringWidgetsToOpaqueRegion

Categories

(Core :: Web Painting, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: roc, Assigned: roc)

Details

Attachments

(1 file)

Kevin says: > Should ask the viewmanager for the RootWidget using nsViewManager::GetWidget > instead of getting it out of the root view. A while back I put in support which > makes it possible to pass in a widget instead of requiring the root view to have > a widget.
Status: NEW → ASSIGNED
Priority: -- → P3
Target Milestone: --- → mozilla0.9
Kevin, the attached patch fixes all the places I can think of where we may need to use the special widget for the root view. But how can I test this?
I have some code which removed the widgets created by the content viewer by passing a widget to the view manager instead of creating a widget for the root view. The bits for this have rotted and I don't have time right now to resurrect them. Anyway, It's probably easier to start removing the content viewers widget's from scratch since the content viewer code has changed substantially since I made the initial attempt. Your changes look good and move us back into a position which will allow us to begin removing the content viewer widgets. r=kmcclusk@netscape.com
OK Marc, I need your approval for this fix. Thanks!
Based on Kevin's comments, I guess this isn't really needed for Mozilla 0.9, but I'd still like to check in ASAP.
Priority: P3 → P2
Target Milestone: mozilla0.9 → mozilla1.0
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Marking verified per last comments
Status: RESOLVED → VERIFIED
Component: Layout: View Rendering → Layout: Web Painting
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: