Adding support for root views with externally defined widgets. Bug 73383. r=kmcclusk,sr=attinasi